# RAMF-shapeNav-Archive

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.cfg  config.cmake
RAMF/: RAMF_main.cpp  TrainManager.cpp  dev progress.txt
RAMF/ActiveMatter/: ActiveMatter.cpp  Airship.cpp  Airship.h  AirshipSwarm.cpp  AirshipSwarm.h  Balloon.cpp  Balloon.h  CMakeLists.txt  HomogeneousSwarm.cpp  HomogeneousSwarm.h  InertialessSwimmer.cpp  InertialessSwimmer.h  PointParticle.cpp  PointParticle.h  PointVehicle.cpp  PointVehicle.h
RAMF/Actor/: Actor.cpp  CMakeLists.txt  DeformationActor.cpp  DeformationActor.h
RAMF/Agent/: Agent.cpp  CMakeLists.txt  Memory.cpp  OrnsteinUhlenbeckActionNoise.cpp  OrnsteinUhlenbeckActionNoise.h  PPO2.cpp  PPO2.h  PPOBase.h  PPOMemory.cpp  PPOMemory.h  RandomWalkNoise.h  Sumtree.cpp  Sumtree.h  Surfer.cpp  Surfer.h
RAMF/Agent/PPONetworks/: PPONetworks.h
RAMF/Agent/ShapeNavigationAgents/: ShapeNavigationAgents.cpp  ShapeNavigationAgents.h  TanhFittedStrategy.cpp
RAMF/Env/: Environment.cpp  SimuManager.cpp  Trajectory.cpp
RAMF/Fluid/: CMakeLists.txt  Field.h  FlowFieldDataPool.cpp  FlowFieldDataPool.h  Fluid.cpp  Geometry.cpp  Geometry.h  Interpolation.h  Lag2nd3D.cpp  Linear3D.cpp  LoadedFlow.cpp  LoadedFlow.h  Mesh.cpp  MultiscaleStochasticFlow.cpp  MultiscaleStochasticFlow.h  Scalar.cpp  Scalar.h  Scla.cpp  Vctr.cpp
RAMF/Sensor/: CMakeLists.txt  CompositeSensor.h  CompositeeSensor.cpp  OrientationSensor.cpp  OrientationSensor.h  Sensor.cpp  StrainSensor.cpp  StrainSensor.h  VelocityGradSensor.cpp  VelocityGradSensor.h  VelocitySensor.cpp  VelocitySensor.h
RAMF/Task/: CMakeLists.txt  EscapeFromCenter.cpp  EscapeFromCenter.h  Task.cpp
RAMF/include/: ActiveMatter.h  ActiveMatterInterface.h  Actor.h  Agent.h  Config.h  CoordSys.h  Environment.h  Exceptions.h  Fluid.h  FluidInterface.h  Fop.h  Geography.h  MatrixOp.h  Memory.h  MemoryBase.h  RAMF_main.h  Random.h  Sensor.h  SimuManager.h  SwarmInterface.h  Task.h  TaskInterface.h  Timer.h  TorchAPI.h  TrainManager.h  Trajectory.h  direct_discard.h  pch.h  vectypedef.h
RAMF/pybind/: amfpy.cpp
RAMF/utils/: CMakeLists.txt  Config.cpp  Fop.cpp  Geography.cpp  Random.cpp
doc/: Build.md  Catalog.md  Example.md  Overview.md  config_example.cfg
lib/eigen-3.3.9/Eigen/src/Core/: DenseCoeffsBase.h  GeneralProduct.h  Replicate.h  Reverse.h  VectorwiseOp.h
lib/eigen-3.3.9/Eigen/src/Core/products/: GeneralBlockPanelKernel.h  GeneralMatrixMatrix.h  SelfadjointMatrixMatrix.h  TriangularMatrixMatrix.h  TriangularSolverMatrix.h
lib/eigen-3.3.9/Eigen/src/Geometry/: Hyperplane.h  ParametrizedLine.h  Quaternion.h
